# iris

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.json
.claude/commands/: backlog.md  doctor.md  memory.md  new-task.md  rollover.md  run.md  status.md  submit.md  swarm.md  takeover.md
.claude/hooks/: block-ai-commit-trailers.sh  brain-observe.sh  pre-compact.sh  session-start.sh
.claude/skills/commit-style/: SKILL.md
.claude/skills/karpathy-guidelines/: SKILL.md
.claude/skills/swarm/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  integration_request.md
.github/workflows/: ci.yml
Projects/: .gitkeep
Tasks/: .gitkeep
docs/: architecture.md  integrations.md  next.md  plan.md
integrations/: README.md
integrations/discord/: README.md  __init__.py  config.py
integrations/slack/: README.md  app.py  client.py  config.py  parser.py
integrations/webhook/: README.md  __init__.py  config.py
scripts/: _iris_paths.py  brain.py  build-wave-plan.py  detect-verify.sh  doctor.py  handover-new.py  handover-validate.py  memory.py  migrate-handovers.py  notify-slack.sh  notify.py  parse-tasks.py  queue.py  slackbot-start.sh  takeover.py
tests/: conftest.py  test_adapter_contract.py  test_brain.py  test_doctor.py  test_hook_block_ai_trailers.py  test_iris_paths.py  test_memory_markdown.py  test_multiproject_isolation.py  test_parse_tasks.py  test_queue.py  test_route.py  test_skills_present.py  test_takeover.py
(+3 files in other folders)
